
radiusplugin_1.2d:
- option in OpenVPN config file is now: "plugin /etc/openvpn/radiusplugin.so [configfile]
- correct bug: close of configfile was missing

radiusplugin_1.2e:
- use RadiusClass_v1.1a for more machine independance (big endian/little endian)
- use send()/recvInt() instead of sendCode()/recvCode() for internal socket communication

radiusplugin_2.0:
- new features:
	- support of vendor specific attributes with example perl script 
	- support for OpenVPN options: dupliate-cn, client-cert-not-required, username-as-commonname
    - comments allowd in config file
    - parsing of OpenVPN config file for options (see radiusplugin.cnf)
- fixed bugs:
	- crash on rekeying if no radius server respond
	- framed ip is sent in access request packets if the client already has one (at rekeying), for dynamical key assignment through the radius server, so it will not send a new one
	- passwords and sharedsecret are shown as ****** in the logs

radiusplugin_2.0a:
- fix error in IpcSocket.h, 
  bad function name: void IpcSocket::recvBuf(User *) -> void recvBuf(User *);

radiusplugin_2.0b:
- fixed datatypes from int to uint32_t/uint64_t to prevent overflows above 2^31
- added support for gigawords
- added a Makefile
- correct bug in parsing config files
- add new config variable overwriteccfiles, allows the plugin to overwrite client config files if set to true
- update some documentation
- correct parsing of ip address in RadiusAttribute.cpp in setValue for data type IPADDRESS
- update example config file
- use string for config parsing
- correct bug in Config.cpp: parameter status was detected wrong if parameter status-version parameter is used in OpenVPN config
- don't delete client config file at CLIENT-DISCONNECT it could already a new file from a new AUTH-USER-PASS-VERIFY
- Fix segmentation fault in radiusplugin.cpp. The error occurs if an accounting request fails after a successful authentication.