@@ -68,3 +68,9 @@ radiusplugin_2.0b:
 - correct bug in Config.cpp: parameter status was detected wrong if parameter status-version parameter is used in OpenVPN config
 - don't delete client config file at CLIENT-DISCONNECT it could already a new file from a new AUTH-USER-PASS-VERIFY
 - Fix segmentation fault in radiusplugin.cpp. The error occurs if an accounting request fails after a successful authentication.
+
+radiusplugin_2.0c:
+- add IPv6 support (IPv6 patch for OpenVPN openvpn-2.1-udp6.patch)
+- check if string/buffer length is zero in IpcSocket
+ 
+ 
